--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nacos-sdk-rust-binding-py"
-version = "0.3.6-ALPHA"
+version = "0.3.6"
 edition = "2021"
 license = "Apache-2.0"
 publish = false
@@ -23,7 +23,7 @@ pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
 # for block api
 futures = { version = "0.3", default-features = false, features = [] }
 
-nacos-sdk = { version = "0.3.5", features = ["async"] }
+nacos-sdk = { version = "0.3.6", features = ["async"] }
 #nacos-sdk = { git = "https://github.com/nacos-group/nacos-sdk-rust.git", features = ["async"] }
 
 tracing-subscriber = { version = "0.3", features = ["default"] }
