--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nacos-sdk-rust-binding-py"
-version = "0.4.2"
-edition = "2021"
+version = "0.5.0"
+edition = "2024"
 license = "Apache-2.0"
 publish = false
 authors = ["CheirshCai <785427346@qq.com>"]
@@ -21,12 +21,11 @@ doc = false
 pyo3 = "0.20"
 pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
 # for block api
-futures = { version = "0.3", default-features = false, features = [] }
+futures = { version = "0.3", default-features = false, features = ["executor"] }
 
-nacos-sdk = { version = "0.4.2", features = ["default", "auth-by-aliyun"] }
-#nacos-sdk = { git = "https://github.com/nacos-group/nacos-sdk-rust.git", features = ["default"] }
+nacos-sdk = { version = "0.5.0", features = ["default", "auth-by-aliyun"] }
+#nacos-sdk = { git = "https://github.com/nacos-group/nacos-sdk-rust.git", branch = "main", features = ["default", "auth-by-aliyun"] }
 
 tracing-subscriber = { version = "0.3", features = ["default"] }
 #tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] } # occur `<unknown time>`
 tracing-appender = "0.2"
-lazy_static = "1.4.0"
