ai-coding: upgrade PyO3 0.27 and replaced pyo3-asyncio with pyo3-async-runtimes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ crate-type = ["cdylib"]
 doc = false
 
 [dependencies]
-pyo3 = "0.20"
-pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
+pyo3 = "0.27"
+pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
 # for block api
 futures = { version = "0.3", default-features = false, features = ["executor"] }
 
