--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 description = "nacos-sdk-rust binding for Python."
 license = { text = "Apache-2.0" }
 readme = "README.md"
+dynamic = ["version"]
 
 [project.optional-dependencies]
 docs = ["pdoc"]
