--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -149,4 +149,4 @@ jobs:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: upload
-          args: --skip-existing *
+          args: --skip-existing dist/*
